# LocationsFITTool

./: .gitignore  European_Landmarks.gpx  LICENSE  README.md  export_theme.py  light_blue_500.qss  merge_qrc.py  mtp.py  mtp_worker.py  pyproject.toml  requirements.txt  resources.rcc  resources_theme.qrc
examples/: Locations.fit
requirements/: base.txt
src/main/python/: main.py
src/main/python/fit_tool/: base_type.py  data_message.py  definition_message.py  developer_field.py  developer_field_definition.py  field_component.py  field_definition.py  fit_file.py  fit_file_builder.py  generic_message.py  message.py  record.py  sub_field.py
src/main/python/fit_tool/examples/: Locations.fit  modify_activity_example.py  read_test.py  write_activity_example.py  write_course_example.py  write_workout_example.py
src/main/python/fit_tool/old_profile/: profile_type.py
src/main/python/fit_tool/tests/: test_activity_files.py  test_course_files.py  test_crc.py  test_data_message.py  test_definition_message.py  test_field.py  test_fit_file.py  test_profile.py  (+5 more)
src/main/python/location_tool/: files.py  fit.py  fit_data.py  fit_handler.py  geodata_model.py  gpx.py  gui.py  logger.py  logging_utils.py  main_window.py  main_window.ui  mode_select_dialog.py  mtp.py  resources_rc.py  save_fit_dialog.py  settings.py  table.py  theme.py  tracks.py  ui_main_window.py  ui_save_fit_dialog.py  utils.py  waypoints.py
src/main/resources/base/: mtpx-cli  resources.qrc  resources_dist.qrc  resources_theme_dark.qrc  resources_theme_light.qrc  theme.qss  theme_dark.qss  theme_light.qss
(+143 files in other folders)
