[project]
name = "locationsfittool"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "gpxpy>=1.6.2",
    "pyside6>=6.9.0",
]

[dependency-groups]
fbs = [
    "fbs",
]
genprofile = [
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
]

[tool.uv.sources]
fbs = { path = "fbs/fbs-1.2.7.tar.gz" }
