[project]
name = "locationsfittool"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6.2",
    "pyside6>=6.8.0",
    "qt-material>=2.17",
]

[dependency-groups]
genprofile = [
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
]

[tool.ruff]
line-length = 100
